--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -13,7 +13,10 @@
   when: kibana_proxy_auth
 
 - name: kibana-configure | Compile Nginx configuration
-  template: src=nginx.conf.j2 dest={{nginx_dir|default('/etc/nginx')}}/sites-enabled/kibana.conf
+  template: src=nginx.conf.j2 dest={{nginx_dir|default('/etc/nginx')}}/sites-available/kibana.conf
   when: kibana_proxy_nginx
-  notify:
-  - nginx reload
+  notify: [ nginx reload ]
+
+- name: kibana | Enable Nginx site
+  file: src={{nginx_dir|default('/etc/nginx')}}/sites-available/kibana.conf dest={{nginx_dir|default('/etc/nginx')}}/sites-enabled/kibana.conf state=link
+  when: kibana_proxy_nginx
