--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,4 @@ script:
     && (echo 'Idempotence test: pass' && exit 0)
     || (echo 'Idempotence test: fail' && exit 1)
 
-  - test -f /var/www/kibana/www/config.js || exit 1
+  - ps -ef | grep [k]ibana || exit 1
